--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.2"
   },
   "devDependencies": {
-    "sass": "^1.69.7"
+    "live-server": "^1.2.2",
+    "sass": "^1.70.0"
   }
 }
